Added table style

--- a/main.css
+++ b/main.css
@@ -38,3 +38,11 @@ figcaption {
     text-align: center;
     font-style: italic;
 }
+
+
+th{
+  text-align: left;
+}
+
+tr:nth-child(even) {background-color: white}
+tr:nth-child(odd) {background-color: #eeeeff}
