--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    max-width: 45rem;
+    max-width: 50rem;
     margin: 0 auto;
     font-family: Helvetica, sans-serif;
     font-size: 1em;
@@ -32,6 +32,7 @@ main {
 
 img {
     max-width: 100%;
+    box-shadow: 0 0 5px rgba(51, 51, 51, 0.66);
 }
 
 figcaption {
@@ -41,8 +42,22 @@ figcaption {
 
 
 th{
-  text-align: left;
+    text-align: left;
+    padding: 5px 5px;
+    font-size: 1.1em;
 }
 
 tr:nth-child(even) {background-color: white}
-tr:nth-child(odd) {background-color: #eeeeff}
+tr:nth-child(odd) {background-color: rgba(141, 60, 88, 0.26)
+}
+
+td {
+    padding: 5px 10px;
+    line-height: 1.3;
+}
+
+table caption {
+    margin: 10px 0;
+    font-weight: bold;
+}
+
