--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -1,14 +1,15 @@
 /* SIGRID MADE THIS; WILL FIX */
 
 h1, p, table th {
-  //text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 body {
   background-color: #1c1c1c;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
+  //font-weight: 700;
   margin: 0;
+  color: #ffffff;
 }
 
 h1 {
@@ -56,7 +57,13 @@ main {
   margin: auto;
   background-color: #1f1f1f;
   box-shadow: 0 0 20px black;
-  padding: 20px;
+  transition: opacity 0.4s;
+  animation: mainFadeIn 0.4s linear;
+}
+
+@keyframes mainFadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .content-area {
@@ -104,3 +111,6 @@ li {
 
 }
 
+strong {
+    color: #eff4b6;
+}
