--- a/website/styles/discography.css
+++ b/website/styles/discography.css
@@ -1,12 +1,4 @@
-li {
-  font-weight: 600;
-  font-size: 1.1em;
-  color: white;
-  line-height: 1.7;
-  list-style-position: inside;
-}
-
-.album-container {
+.album-content {
   display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
   display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
   display: -ms-flexbox;      /* TWEENER - IE 10 */
@@ -19,19 +11,21 @@ li {
 .album-art {
   width: 20em;
   height: 20em;
-  background-color: white;
 }
 
-.album-art img {
-  width: 20em;
-  height: 20em;
-}
-
-.album-content{
+.album-songs{
   -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
   -moz-box-flex: 1;         /* OLD - Firefox 19- */
   width: 40%;               /* For old syntax, otherwise collapses. */
   -webkit-flex: 1;          /* Chrome */
   -ms-flex: 1;              /* IE 10 */
   flex: 1;
+}
+
+li {
+  font-weight: 600;
+  font-size: 1.1em;
+  color: white;
+  line-height: 1.7;
+  list-style-position: inside;
 }
