--- a/website/styles/home.css
+++ b/website/styles/home.css
@@ -1,4 +1,4 @@
-h1 {
+h1#homesplash{
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
   color: white;
@@ -10,7 +10,9 @@ h1 {
   right:0;
   left:0;
   height: 100px;
+  opacity: 0;
 }
+
 
 p {
   font-family: 'Ubuntu', sans-serif;
@@ -23,6 +25,12 @@ p {
 img#bulletin {
   width: 100%;
   height: 100vh;
+  opacity: 0;
+}
+
+.splash {
+  opacity: 1 !important;
+  transition: opacity 7.5s cubic-bezier(0, 0.32, 1, 1);
 }
 
 #wrap {
