--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -23,6 +23,10 @@ main {
   overflow: hidden;
 }
 
+img {
+  width: 100%;
+}
+
 /* Transition on switching articles */
 @keyframes mainFadeIn {
   0%   { opacity: 0; }
