--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -75,3 +75,41 @@ main {
 strong {
     color: #eff4b6;
 }
+
+main#pictures > img{
+  display: block;
+  width: 640px;
+  height: 400px;
+  margin: auto;
+  box-shadow:
+}
+
+footer{
+  background-color: #141414;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer button{
+  background:none;
+  color:inherit;
+  border:none;
+  padding:0;
+  font: inherit;
+  cursor: pointer;
+  font-size: 21px;
+}
+
+footer h2{
+  font-size: 24px;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+
+}
