--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -100,12 +100,13 @@ footer{
   background-color: #141414;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 150px;
 }
 
 footer div{
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 footer button{
@@ -115,13 +116,17 @@ footer button{
   padding:0;
   font: inherit;
   cursor: pointer;
-  font-size: 21px;
+  font-size: 12px;
 }
 
 footer h2{
-  font-size: 24px;
+  font-size: 15px;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
+}
 
+footer div.social-media {
+  height: 50px;
+  width: 50px;
 }
