--- a/website/styles/Navbar.css
+++ b/website/styles/Navbar.css
@@ -16,7 +16,7 @@
 }
 
 /*De "knappene" på navbaren som ikke har droppdown*/
-.navbar a{
+.navbar > a{
     float: right;
     font-size: 16px;
     color: white;
@@ -41,7 +41,7 @@
 }
 
 /*Dropdown knappene*/
-.dropdown .dropbtn {
+.dropdown .dropbtn, .icon{
     font-size: 16px;
     border: none;
     outline: none;
@@ -53,7 +53,7 @@
 }
 
 /*Alt blir rødt ved hover*/
-.navbar a:hover, .dropdown:hover .dropbtn , dropdown-content a:hover{
+.navbar a:hover, .dropdown:hover .dropbtn , dropdown-content a:hover, .icon:hover{
     background-color: red;
 	cursor: pointer; 
 }
@@ -78,14 +78,48 @@
     text-align: center;
 }
 
-.show {
-    display: block;
-}
 
-.navbar img{
+
+/*Liten dropdown*/
+.navbar > img{
     height: 46px; 
     width: auto;
     cursor: pointer;
+}
+
+/*dropdown icon for små skjermer*/
+ .icon{
+    display:none;
+    font-size: 16px;
+    padding-top: 11px;
+    float: right;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+ .smalldropdown{
+     position: relative;
+     display: none;
+ }
+
+ .smalldropdown > a{
+     float:none;
+     display: block;
+     text-align: center;
+     padding-top: 5px;
+ }
+
+ /*Dropdown bakgrunnen for liten dropdown*/
+.smalldropdown {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right:0px;
+    top:40px;
 }
 
 /*Dette er så brei navbaren kan være før logoen må forsvinne*/
@@ -95,4 +129,20 @@
      }
  }
 
- /*Navbaren failer hvis den er mindre enn 580px*/
+ /*Når skjermen er mindre ennn 580px, så går vi over på liten skjerm dropdown (icon)*/
+@media (max-width: 580px){
+
+   .navbar > a, .dropbtn{
+        display: none;
+    } 
+
+   .icon{
+       display:block;
+   }
+
+}
+
+
+.show{
+    display: block;
+}
