--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -11,7 +11,7 @@ body {
 main {
   /* To place the navbar above the page content */
   position: relative;
-  z-index: -1;
+  z-index: 0;
   
   max-width: 50em;
   margin: auto;
@@ -19,6 +19,11 @@ main {
   box-shadow: 0 0 20px black;
   transition: opacity 0.4s;
   animation: mainFadeIn 0.4s linear;
+}
+
+nav {
+  position: relative;
+  z-index: 1;
 }
 
 .content-area {
