--- a/website/styles/Navbar.css
+++ b/website/styles/Navbar.css
@@ -107,7 +107,7 @@
      float:none;
      display: block;
      text-align: center;
-     padding-top: 5px;
+     padding-top: 10px;
  }
 
  /*Dropdown bakgrunnen for liten dropdown*/
@@ -115,7 +115,8 @@
     display: none;
     position: absolute;
     background-color: #333;
-    min-width: 160px;
+    width: 100%;
+    height: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right:0px;
