--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -1,17 +1,27 @@
 /* Stylesheet for styles which are universal to site */
 
+html {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 body {
   background-color: #1c1c1c;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   margin: 0;
   color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 main {
   /* To place the navbar above the page content */
   position: relative;
   z-index: 0;
+  flex-grow: 1;
   
   max-width: 50em;
   margin: auto;
