--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -12,7 +12,7 @@ main {
   /* To place the navbar above the page content */
   position: relative;
   z-index: 0;
-  
+
   max-width: 50em;
   margin: auto;
   background-color: #1f1f1f;
@@ -34,7 +34,7 @@ nav {
 
 @media (max-width: 720px) {
   .content-area {
-    margin: 0;
+    margin: 20px;
   }
 }
 
@@ -120,8 +120,7 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 20px;
   position: relative;
   z-index: 1;
 }
