--- a/website/styles/Navbar.css
+++ b/website/styles/Navbar.css
@@ -1,7 +1,7 @@
 ﻿/*Selve navbaren*/
 .navbar {
     overflow:hidden;
-    background-color: #333;
+    background-color: #141414;
     font-family:Arial;
     padding-right: 50px;    /*Måtte padde litt, eller endre på dropdown oppførsel*/
     height: 46px;
@@ -52,7 +52,7 @@
 
 }
 
-/*Alt blir rødt ved hover*/
+/*Alt blir lilla ved hover*/
 .navbar a:hover, .dropdown:hover .dropbtn , dropdown-content a:hover, .icon:hover{
     background-color: #8d3c58;
 	cursor: pointer; 
@@ -62,7 +62,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: #141414;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -114,7 +114,7 @@
 .smalldropdown {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: #141414;
     width: 100%;
     height: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
