--- a/website/styles/home.css
+++ b/website/styles/home.css
@@ -1,16 +1,17 @@
-h1#homesplash{
-  font-family: 'Ubuntu', sans-serif;
+h1#homesplash {
+  font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   color: white;
   font-size: 6rem;
   position: absolute;
   margin: auto;
-  top:0;
-  bottom:0;
-  right:0;
-  left:0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   height: 100px;
   opacity: 0;
+  text-shadow: 0 0 3px #000000;
 }
 
 main#home {
@@ -21,11 +22,11 @@ main#home {
 }
 
 div.navbar {
-  background-color: rgba(0,0,0,0.0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 
 p {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   color: white;
   font-size: 1.4em;
@@ -45,7 +46,7 @@ img#bulletin {
 
 #wrap {
   width: 100%;
-  height:100vh;
+  height: 100vh;
   text-align: center;
   position: relative;
 }
@@ -77,6 +78,6 @@ main {
   width: 100%;
 }
 
-main#home > div > > div > ul {
+main#home > div > div > ul {
   padding: 0;
 }
