--- a/website/styles/home.css
+++ b/website/styles/home.css
@@ -11,7 +11,7 @@ h1#homesplash {
   left: 0;
   height: 100px;
   opacity: 0;
-  text-shadow: 0 0 3px #000000;
+  text-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
 }
 
 main#home {
