--- a/website/styles/navbar.css
+++ b/website/styles/navbar.css
@@ -1,20 +1,13 @@
-/*Selve navbaren*/
+/*Main navbar background*/
 .navbar {
   overflow: hidden;
   background-color: #141414;
   font-family: Arial;
-  padding-right: 50px; /*Måtte padde litt, eller endre på dropdown oppførsel*/
+  padding-right: 50px; /*Needed to add some padding*/
   height: 46px;
-  /*
-       Låse navbar til toppen?
-       Gir feil på dropdowns
-     position:fixed;
-     top:0;
-    width: 100%;
-       */
-}
+  }
 
-/*De "knappene" på navbaren som ikke har droppdown*/
+/*The "buttons" without dropdowns*/
 .navbar > a {
   float: right;
   font-size: 16px;
@@ -23,6 +16,7 @@
   padding: 14px 16px;
   text-decoration: none;
 
+  /*Prevents user from marking the content of the navbar*/
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -37,7 +31,7 @@
   overflow: hidden;
 }
 
-/*Dropdown knappene*/
+/*Dropdown buttons*/
 .dropdown .dropbtn,
 .icon {
   font-size: 16px;
@@ -49,16 +43,15 @@
   font-weight: bold;
 }
 
-/*Alt blir lilla ved hover*/
+/*Change color on hover/on push*/
 .navbar a:hover,
 .dropdown:hover .dropbtn,
-dropdown-content a:hover,
-.icon:hover {
+dropdown-content a:hover, .icon:hover{
   background-color: #8d3c58;
   cursor: pointer;
 }
 
-/*Dropdown bakgrunnen*/
+/*Dropdown background*/
 .dropdown-content {
   display: none;
   position: absolute;
@@ -68,7 +61,7 @@ dropdown-content a:hover,
   z-index: 1;
 }
 
-/*Lenkene på dropdownen*/
+/*Links on dropdown*/
 .dropdown-content a {
   float: none;
   color: white;
@@ -78,15 +71,18 @@ dropdown-content a:hover,
   text-align: center;
 }
 
-/*Liten dropdown*/
+/*Dropdown logo*/
 .navbar > img {
+  margin-left: 10px;
   height: 46px;
   width: auto;
   cursor: pointer;
 }
 
-/*dropdown icon for små skjermer*/
+/*dropdown icon for small screens*/
 .icon {
+  margin-top: auto;
+  margin-bottom: auto;
   display: none;
   font-size: 16px;
   padding-top: 11px;
@@ -96,19 +92,23 @@ dropdown-content a:hover,
   top: 0;
 }
 
+/*Small dropdown*/
 .smalldropdown {
   position: relative;
   display: none;
 }
 
+/*Small dropdown links*/
 .smalldropdown > a {
   float: none;
   display: block;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-size: 80px;
 }
 
-/*Dropdown bakgrunnen for liten dropdown*/
+/*Dropdown background for small dropdown*/
 .smalldropdown {
   display: none;
   position: absolute;
@@ -118,17 +118,17 @@ dropdown-content a:hover,
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   right: 0px;
-  top: 40px;
+  top: 120px;
 }
 
-/*Dette er så brei navbaren kan være før logoen må forsvinne*/
-@media (max-width: 780px) {
+/*This is as wide as the navbaren can be before the logo needs to disapare*/
+@media (max-width: 800px) {
   .navbar img {
     display: none;
   }
 }
 
-/*Når skjermen er mindre ennn 580px, så går vi over på liten skjerm dropdown (icon)*/
+/*When the screen is less than 580px, go to small dropdown*/
 @media (max-width: 580px) {
   .navbar > a,
   .dropbtn {
@@ -140,16 +140,29 @@ dropdown-content a:hover,
   }
 }
 
+/*When on mobile device*/
 @media (orientation: portrait) {
   .navbar > a,
   .dropbtn {
     display: none;
   }
+  .navbar{
+    height:120px;  
+  }
   .icon {
     display: block;
+    font-size: 71px;
+    margin-right: 20px;
+
+
+  }
+  .navbar > img{
+      display: block;
+      height: 120px;
   }
 }
 
+/*Displays dropdowns*/
 .show {
   display: block;
 }
