--- a/website/styles/faq.css
+++ b/website/styles/faq.css
@@ -1,4 +1,12 @@
-﻿.faq-area >p>  a{
+﻿/*
+    FILE NAME: styles/faq.css
+    WRITTEN BY: Kristoffer Håkonsen
+    WHEN: October/November 2017
+    PURPOSE: This page styles the links in the faq page
+*/
+
+
+.faq-area >p>  a{
     color: #8d3c58;
     cursor: pointer; 
 }
