--- a/website/styles/home.css
+++ b/website/styles/home.css
@@ -44,29 +44,13 @@ img#bulletin {
   transition: opacity 7.5s cubic-bezier(0, 0.32, 1, 1);
 }
 
-#wrap {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
-  position: relative;
-}
-
 div#container {
+  background-color: #000814;
   width: 100%;
   height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.wrapper {
-  display: inherit;
-  justify-content: center;
-}
-
-.social-media {
-  width: 80px;
-  height: 80px;
 }
 
 li {
@@ -80,4 +64,22 @@ main {
 
 main#home > div > div > ul {
   padding: 0;
+}
+
+/* For styling and positioning social media buttons */
+.wrapper {
+  display: inherit;
+  justify-content: center;
+}
+
+.social-media {
+  width: 80px;
+  height: 80px;
+}
+
+.wrap {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  position: relative;
 }
