--- a/website/styles/about.css
+++ b/website/styles/about.css
@@ -6,6 +6,6 @@ div.memberListing {
 }
 
 div.memberListing > img {
-  max-width: 10em;
-  margin-right: 0.5em;
+  max-width: 200px;
+  margin: 1em 1em 1em 0;
 }
