--- a/website/styles/home.css
+++ b/website/styles/home.css
@@ -1,3 +1,10 @@
+/*
+FILE NAME: styles/home.css
+WRITTEN BY: Sigrid Marita Kvamme
+WHEN: October/November 2017
+PURPOSE: Exhibit the albums and music of the band.
+*/
+
 h1#homesplash {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
