- Make the bulletin image stretch to the top of the page when navbar is in mobile mode, uses negative height of navbar to do this

--- a/website/styles/navbar.css
+++ b/website/styles/navbar.css
@@ -164,6 +164,9 @@ dropdown-content a:hover,
   .dropbtn {
     display: none;
   }
+  main#home {
+    margin-top: -120px !important;
+  }
   .navbar {
     height: 120px;
   }
