- Add descriptions to CSS and HTML files of about and guestbook

--- a/website/styles/about.css
+++ b/website/styles/about.css
@@ -1,3 +1,10 @@
+/*
+FILE NAME: styles/about.css
+WRITTEN BY: Håvard Bjerke
+WHEN: October/November 2017
+PURPOSE: Alignment and placement of member elements and pictures
+*/
+
 div.memberListing {
   display: flex;
   flex-direction: row;
