--- a/website/styles/navbar.css
+++ b/website/styles/navbar.css
@@ -29,7 +29,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  /*Prevents user from marking the content of the navbar*/
+  /*Prevents user from marking the content of the navbar inn all browsers*/
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -158,7 +158,8 @@ dropdown-content a:hover,
   }
 }
 
-/*When on mobile device in portrait mode*/
+/*When on mobile device in portrait mode, remove the "normal navbar" and replace with small dropdown button
+    change size on the navbar, and images and icons, etc*/
 @media (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   .navbar > a,
   .dropbtn {
