--- a/website/styles/guestbook.css
+++ b/website/styles/guestbook.css
@@ -70,13 +70,13 @@ div#commentValidationMessage > p {
 }
 
 @media (max-width: 200px),
-    (-webkit-min-device-pixel-ratio: 2) {
+    (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   #commentForm > .formField {
     flex-direction: column;
   }
 }
 
-@media (-webkit-min-device-pixel-ratio: 2) {
+@media (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   #commentForm {
     font-size: 1.5em;
   }
