--- a/website/styles/navbar.css
+++ b/website/styles/navbar.css
@@ -10,7 +10,7 @@
 .navbar {
   overflow: hidden;
   background-color: #141414;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   padding-right: 50px; /*Needed to add some padding*/
   height: 46px;
 }
@@ -98,7 +98,6 @@ dropdown-content a:hover,
   margin-top: auto;
   margin-bottom: auto;
   display: none;
-  font-size: 16px;
   padding-top: 11px;
   float: right;
   position: absolute;
@@ -120,7 +119,6 @@ dropdown-content a:hover,
 .smalldropdown {
   padding-top: 30px;
   padding-bottom: 30px;
-  position: relative;
   display: none;
   position: absolute;
   background-color: #141414;
